Revision history for Perl extension {{$dist->name}}:

{{$NEXT}}

0.24      2020-03-30 12:25:45+01:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Use IPC::Run3 for uptime.

  - Add the ability to override the path of uptime.

  [Bug Fixes]
  - Check for uptime errors.

  [Other]
  - Move Perl::Critic exceptions into t/etc/perlcriticrc.

0.23      2020-03-29 13:09:50+01:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Support getloadavg for DragonFly BSD.

  - Change uptime to use backticks instead of piped open.

  [Bug Fixes]
  - uptime immediately returns undef if path to `uptime` cannot be found.

  [Tests]
  - Fixed test when skipping getloadavg test.

  - Skip uptime test if uptime cannot be found.

0.22      2020-03-27 12:51:39+00:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Split getloadavg, proc_loadavg and uptime into separate functions.

  - Use File::Which to locate uptime.

  [Incompatabilities]
  - Renamed _getbsdload to getloadavg.

  [Bug Fixes]
  - Accept uptime output without commas, RT#14034.

  [Tests]
  - Fix bug testing high loads.

  - Add tests for each function.

0.21      2020-03-25 13:03:11+00:00 Europe/London
  [Bug Fixes]
  - Actually use system getloadavg for NetBSD and Solaris.

0.20      2020-03-25 12:35:33+00:00 Europe/London
  [Enhancements]
  - Add support for NetBSD #2 and Solaris.

  - Return a single undef when the load function fails.

  [Bug Fixes]
  - The return value of getloadavg is now checked, #4.

  - The load method is set up in a BEGIN block instead of import, #5.

  [Documentation]
  - Update POD about changes in version 0.12.

0.12      2020-03-24 23:22:57+00:00 Europe/London
  [Enhancements]
  - Use getloadavg system call in Linux.

  - Port changes for Cygwin from Sys::CpuLoadX.

  [Tests]
  - Show diagnostics.

0.11      2020-03-24 22:57:02+00:00 Europe/London
  [Enhancements]
  - Added support for OS/X, thanks to Vincent Lefèvre, RT#14034/GH#3.
