@@ -1,6 +1,8 @@
 Revision history for Perl extension {{$dist->name}}:
 
 {{$NEXT}}
+  [Tests]
+  - Check if uptime is executable.
 
 0.24      2020-03-30 12:25:45+01:00 Europe/London (TRIAL RELEASE)
   [Enhancements]
